Add contradiction detection workflow
(cherry picked from commit 4187c29cb0d0766bdcfaaa8b450bd006199be6ea)
